added all footers and navigations

--- a/blog.html
+++ b/blog.html
@@ -91,7 +91,7 @@
     <!-- The navigation section ends  -->
 
 
-    
+
 
     <!-- The footer section starts -->
 
@@ -102,7 +102,7 @@
 
                 <div class="footer-brand">
 
-                    <a href="#" class="logo">H.O.G-Parish</a>
+                    <a href="./index.html" class="logo">H.O.G-Parish</a>
 
                     <p class="text">
                         We are the Redeemed Christian Church Of God Hope Of Glory Parish and all we just have to say is
@@ -148,7 +148,7 @@
                     </li>
 
                     <li>
-                        <a href="#" class="footer-link">Home</a>
+                        <a href="./index.html" class="footer-link">Home</a>
                     </li>
 
                     <li>
@@ -160,7 +160,7 @@
                     </li>
 
                     <li>
-                        <a href="#blog" class="footer-link">Blog</a>
+                        <a href="./blog.html" class="footer-link">Blog</a>
                     </li>
 
                     <li>
@@ -286,7 +286,8 @@
 
         <div class="footer-bottom">
             <p class="copyright">
-                &copy; 2022 <a href="" class="copyright-link">Emmanuel Mojiboye Oluwole</a> . All Rights Reserved
+                &copy; 2022 <a href="https://www.instagram.com/emmanuel.9944/" class="copyright-link">Emmanuel Mojiboye
+                    Oluwole</a> . All Rights Reserved
             </p>
         </div>
 
