--- a/index.html
+++ b/index.html
@@ -937,208 +937,207 @@
 
 
 
+<!-- The footer section starts -->
 
+<footer class="footer">
 
-    <!-- The footer section starts -->
+    <div class="footer-top section">
+        <div class="container">
 
-    <footer class="footer">
+            <div class="footer-brand">
 
-        <div class="footer-top section">
-            <div class="container">
+                <a href="./index.html" class="logo">H.O.G-Parish</a>
 
-                <div class="footer-brand">
+                <p class="text">
+                    We are the Redeemed Christian Church Of God Hope Of Glory Parish and all we just have to say is
+                    that
+                    don't let a day passby without making someone smile and happy. Always Remember "THAT JESUS
+                    LOVE'S YOU"
+                </p>
 
-                    <a href="#" class="logo">H.O.G-Parish</a>
-
-                    <p class="text">
-                        We are the Redeemed Christian Church Of God Hope Of Glory Parish and all we just have to say is
-                        that
-                        don't let a day passby without making someone smile and happy. Always Remember "THAT JESUS
-                        LOVE'S YOU"
-                    </p>
-
-                    <ul class="social-list">
-
-                        <li>
-                            <a href="https://www.instagram.com/emmanuel.9944/" class="social-link">
-                                <ion-icon name="logo-facebook">f</ion-icon>
-                            </a>
-                        </li>
-
-                        <li>
-                            <a href="https://www.instagram.com/emmanuel.9944/" class="social-link">
-                                <ion-icon name="logo-twitter">t</ion-icon>
-                            </a>
-                        </li>
-
-                        <li>
-                            <a href="https://www.instagram.com/emmanuel.9944/" class="social-link">
-                                <ion-icon name="logo-instagram">I</ion-icon>
-                            </a>
-                        </li>
-
-                        <li>
-                            <a href="https://www.instagram.com/emmanuel.9944/" class="social-link">
-                                <ion-icon name="logo-linkedin">f</ion-icon>
-                            </a>
-                        </li>
-
-                    </ul>
-
-                </div>
-
-                <ul class="footer-list">
+                <ul class="social-list">
 
                     <li>
-                        <p class="footer-list-title">Our links</p>
+                        <a href="https://www.instagram.com/emmanuel.9944/" class="social-link">
+                            <ion-icon name="logo-facebook">f</ion-icon>
+                        </a>
                     </li>
 
                     <li>
-                        <a href="#" class="footer-link">Home</a>
+                        <a href="https://www.instagram.com/emmanuel.9944/" class="social-link">
+                            <ion-icon name="logo-twitter">t</ion-icon>
+                        </a>
                     </li>
 
                     <li>
-                        <a href="./events.html" class="footer-link">Events</a>
+                        <a href="https://www.instagram.com/emmanuel.9944/" class="social-link">
+                            <ion-icon name="logo-instagram">I</ion-icon>
+                        </a>
                     </li>
 
                     <li>
-                        <a href="./campaign.html" class="footer-link">Campaigns</a>
-                    </li>
-
-                    <li>
-                        <a href="#blog" class="footer-link">Blog</a>
-                    </li>
-
-                    <li>
-                        <a href="./about.html" class="footer-link">About Us</a>
-                    </li>
-
-                    <li>
-                        <a href="./contact.html" class="footer-link">Contact</a>
+                        <a href="https://www.instagram.com/emmanuel.9944/" class="social-link">
+                            <ion-icon name="logo-linkedin">f</ion-icon>
+                        </a>
                     </li>
 
                 </ul>
-
-                <ul class="footer-list">
-
-                    <li>
-                        <p class="footer-list-title">Church Programs</p>
-                    </li>
-
-                    <li>
-                        <a href="sms: +234-9012857304" class="footer-link">Believer's Class</a>
-                    </li>
-
-                    <li>
-                        <a href="sms: +234-9012857304" class="footer-link">House Fellowship</a>
-                    </li>
-
-                    <li>
-                        <a href="sms: +234-9012857304" class="footer-link">Campaigns</a>
-                    </li>
-
-                    <li>
-                        <a href="./volunteer.html" class="footer-link">Volunteer</a>
-                    </li>
-
-                    <li>
-                        <a href="./events.html" class="footer-link">Events</a>
-                    </li>
-
-                </ul>
-
-                <ul class="footer-list">
-
-                    <li>
-                        <p class="footer-list-title">Other links</p>
-                    </li>
-
-                    <li>
-                        <a href="#" class="footer-link">FAQ</a>
-                    </li>
-
-                    <li>
-                        <a href="./volunteer.html" class="footer-link">Portfolio</a>
-                    </li>
-
-                    <li>
-                        <a href="#" class="footer-link">Privacy Policy</a>
-                    </li>
-
-                    <li>
-                        <a href="#" class="footer-link">Terms & Conditions</a>
-                    </li>
-
-                    <li>
-                        <a href="./campaign.html" class="footer-link">Support</a>
-                    </li>
-
-
-
-                </ul>
-
-                <ul class="footer-list">
-
-                    <li>
-                        <p class="footer-list-title">Contact Us</p>
-                    </li>
-
-                    <li class="footer-item">
-
-                        <div class="footer-item-icon">
-                            <ion-icon name="call">C</ion-icon>
-                        </div>
-
-                        <div>
-                            <a href="tel:+234-9012857304" class="footer-item-link">+234-9012857304</a>
-                            <a href="tel:+234-8115993636" class="footer-item-link">+234-8115993636</a>
-
-                        </div>
-
-                    </li>
-
-                    <li class="footer-item">
-
-                        <div class="footer-item-icon">
-                            <ion-icon name="mail">M</ion-icon>
-                        </div>
-
-                        <div>
-                            <a href="mailto:emzzyoluwole@gmail.com" class="footer-item-link">emzzyoluwole@gmail.com</a>
-                            <a href="mailto:eoluwole217@gmail.com" class="footer-item-link">eoluwole217@gmail.com</a>
-
-                        </div>
-
-                    </li>
-
-                    <li class="footer-item">
-
-                        <div class="footer-item-icon">
-                            <ion-icon name="location">L</ion-icon>
-                        </div>
-
-                        <address class="footer-item-link">
-                            Oke-Aro, Ogun State, Federal Republic of Nigeria
-                        </address>
-
-                    </li>
-
-                </ul>
-
-
 
             </div>
+
+            <ul class="footer-list">
+
+                <li>
+                    <p class="footer-list-title">Our links</p>
+                </li>
+
+                <li>
+                    <a href="./index.html" class="footer-link">Home</a>
+                </li>
+
+                <li>
+                    <a href="./events.html" class="footer-link">Events</a>
+                </li>
+
+                <li>
+                    <a href="./campaign.html" class="footer-link">Campaigns</a>
+                </li>
+
+                <li>
+                    <a href="./blog.html" class="footer-link">Blog</a>
+                </li>
+
+                <li>
+                    <a href="./about.html" class="footer-link">About Us</a>
+                </li>
+
+                <li>
+                    <a href="./contact.html" class="footer-link">Contact</a>
+                </li>
+
+            </ul>
+
+            <ul class="footer-list">
+
+                <li>
+                    <p class="footer-list-title">Church Programs</p>
+                </li>
+
+                <li>
+                    <a href="sms: +234-9012857304" class="footer-link">Believer's Class</a>
+                </li>
+
+                <li>
+                    <a href="sms: +234-9012857304" class="footer-link">House Fellowship</a>
+                </li>
+
+                <li>
+                    <a href="sms: +234-9012857304" class="footer-link">Campaigns</a>
+                </li>
+
+                <li>
+                    <a href="./volunteer.html" class="footer-link">Volunteer</a>
+                </li>
+
+                <li>
+                    <a href="./events.html" class="footer-link">Events</a>
+                </li>
+
+            </ul>
+
+            <ul class="footer-list">
+
+                <li>
+                    <p class="footer-list-title">Other links</p>
+                </li>
+
+                <li>
+                    <a href="#" class="footer-link">FAQ</a>
+                </li>
+
+                <li>
+                    <a href="./volunteer.html" class="footer-link">Portfolio</a>
+                </li>
+
+                <li>
+                    <a href="#" class="footer-link">Privacy Policy</a>
+                </li>
+
+                <li>
+                    <a href="#" class="footer-link">Terms & Conditions</a>
+                </li>
+
+                <li>
+                    <a href="./campaign.html" class="footer-link">Support</a>
+                </li>
+
+
+
+            </ul>
+
+            <ul class="footer-list">
+
+                <li>
+                    <p class="footer-list-title">Contact Us</p>
+                </li>
+
+                <li class="footer-item">
+
+                    <div class="footer-item-icon">
+                        <ion-icon name="call">C</ion-icon>
+                    </div>
+
+                    <div>
+                        <a href="tel:+234-9012857304" class="footer-item-link">+234-9012857304</a>
+                        <a href="tel:+234-8115993636" class="footer-item-link">+234-8115993636</a>
+
+                    </div>
+
+                </li>
+
+                <li class="footer-item">
+
+                    <div class="footer-item-icon">
+                        <ion-icon name="mail">M</ion-icon>
+                    </div>
+
+                    <div>
+                        <a href="mailto:emzzyoluwole@gmail.com" class="footer-item-link">emzzyoluwole@gmail.com</a>
+                        <a href="mailto:eoluwole217@gmail.com" class="footer-item-link">eoluwole217@gmail.com</a>
+
+                    </div>
+
+                </li>
+
+                <li class="footer-item">
+
+                    <div class="footer-item-icon">
+                        <ion-icon name="location">L</ion-icon>
+                    </div>
+
+                    <address class="footer-item-link">
+                        Oke-Aro, Ogun State, Federal Republic of Nigeria
+                    </address>
+
+                </li>
+
+            </ul>
+
+
+
         </div>
+    </div>
 
-        <div class="footer-bottom">
-            <p class="copyright">
-                &copy; 2022 <a href="" class="copyright-link">Emmanuel Mojiboye Oluwole</a> . All Rights Reserved
-            </p>
-        </div>
+    <div class="footer-bottom">
+        <p class="copyright">
+            &copy; 2022 <a href="https://www.instagram.com/emmanuel.9944/" class="copyright-link">Emmanuel Mojiboye
+                Oluwole</a> . All Rights Reserved
+        </p>
+    </div>
 
-    </footer>
+</footer>
 
-    <!-- The footer section ends -->
+<!-- The footer section ends -->
 
 
 
