writing code for events.html

--- a/events.html
+++ b/events.html
@@ -90,6 +90,16 @@
 
     <!-- The navigation section ends  -->
 
+    <main>
+        <article>
+
+            <section class="section allBanner">
+                
+            </section>
+
+        </article>
+    </main>
+
 
     
 
