--- a/events.html
+++ b/events.html
@@ -93,15 +93,13 @@
     <main>
         <article>
 
-            <section class="section allBanner">
-                
+            <section class="allBanner"> <br>
+                <h2 class="bannerText">Event Details</h2>
             </section>
 
         </article>
     </main>
 
-
-    
 
     <!-- The footer section starts -->
 
@@ -304,6 +302,30 @@
     </footer>
 
     <!-- The footer section ends -->
+
+
+
+    <!-- The scroll top button starts -->
+
+    <a href="#top" class="scroll-top active" aria-label="Go To Top" data-scroll-top>
+        <ion-icon name="arrow-up-outline">a</ion-icon>
+    </a>
+
+
+    <!-- The scroll top button starts -->
+
+
+
+    <!-- Linking the Owl-Carousel Javascript file -->
+    <script src="./js/owl.carousel.min.js"></script>
+
+    <script src="./js/bootstrap.bundle.min.js"></script>
+    <script src="./js/scripts.js"></script>
+
+    <!-- linking the ionicon script -->
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
 
 
 </body>
