writing code for the donation's section in events.html

--- a/events.html
+++ b/events.html
@@ -93,9 +93,35 @@
     <main>
         <article>
 
+            <!-- The hero section for events.html starts -->
+            
             <section class="allBanner"> <br>
                 <h2 class="bannerText">Event Details</h2>
             </section>
+
+            <!-- The hero section for events.html starts -->
+
+
+
+
+            <!-- The sidebar for events starts -->
+
+            <section class="container eventTypes">
+                <div class="event-content">
+                    <div class="eventType1">
+                        <h1>Blog Posts</h1>
+                    </div>
+
+                    <aside class="sidebar">
+                        <h1>Sidebar</h1>
+                    </aside>
+
+                </div>
+            </section>
+
+
+            <!-- The sidebar for events ends -->
+
 
         </article>
     </main>
