added 3 different changes to events.html

--- a/events.html
+++ b/events.html
@@ -94,7 +94,7 @@
         <article>
 
             <!-- The hero section for events.html starts -->
-            
+
             <section class="allBanner"> <br>
                 <h2 class="bannerText">Event Details</h2>
             </section>
@@ -109,15 +109,97 @@
             <section class="container eventTypes">
                 <div class="event-content">
                     <div class="eventType1">
-                        <h1>Blog Posts</h1>
+                        <h1>Poor People's Donation Campaign</h1>
+                        <div class="event-img">
+                            <div class="event-Time">
+                                <h2>Countdown is finished!</h2>
+                            </div>
+                        </div>
+                        <p>We told our Congregation that our Charity Team seems to be cooking something.... <br> Now we
+                            know that they're doing exactly what their name is and that is "Charity". <br> The idea was
+                            first brought up by the media Team in the House of God and <br> within a little amount of
+                            time the news got spread out and it got to the ears <br> of our Charity Team: Now we find
+                            our self in a post of not only giving out <br> skills but also feeding people, eating with
+                            them, communicating with them, <br> bonding with them and most especially using that
+                            Priviledge as an avenue to <br> get the word of the Lord out there. <br> <br> Now our purses
+                            are closed pertaining this event, if you would like to become a <br> Partner, a Sponsor or a
+                            Team Member, our doors are always opened and <br> you will always be Welcomed</p>
+
                     </div>
 
                     <aside class="sidebar">
-                        <h1>Sidebar</h1>
+                        <h1>Event Details</h1>
+
+                        <div class="detali-one-one">
+
+                            <p><span class="detail"> <i class="fas fa-stopper"></i> Starting Time</span>: 11:00 am -
+                                3:00 pm</p>
+                            <p><span class="detail"> <i class="fas fa-date"></i> Event Date</span>: 31 November, 2022
+                            </p>
+                            <p><span class="detail"> <i class="fas fa-phone"></i> Phone Number</span>: + 234 (901)
+                                285-7304 </p>
+                            <p><span class="detail"> <i class="fas fa-map-marker"></i> Address Location</span>: 20
+                                Lagos, Nigeria</p>
+                        </div>
+                    </aside> 
+
+                    <div class="eventType1"> <br> <br>
+                        <h1>Operation feed the Borno Masses</h1>
+                        <div class="event-img2">
+                            <div class="event-Time">
+                                <h2>Countdown is finished!</h2>
+                            </div>
+                        </div>
+                        <p>Once again alll funds required for this Charity project has been actualized and therefore  <br> countdown closed....  If you wanted to sponsor any of our events and the Doors are shut or the <br> Countdowns have finished don't be afraid, our Team has many other Projects to carry out in which your support would be needed. <br> <br> Thanks again for your time, we really do appreciate you and your time.</p>
+
+                    </div>
+
+                    <aside class="sidebar"> <br> <br>
+                        <h1>Event Details</h1>
+
+                        <div class="detali-one-one">
+
+                            <p><span class="detail"> <i class="fas fa-stop-watch"></i> Starting Time</span>: 8:00 am -
+                                12:30 pm</p>
+                            <p><span class="detail"> <i class="fas fa-date"></i> Event Date</span>: 30 August, 2022
+                            </p>
+                            <p><span class="detail"> <i class="fas fa-phone"></i> Phone Number</span>: + 234 (901)
+                                285-7304 </p>
+                            <p><span class="detail"> <i class="fas fa-map-marker"></i> Address Location</span>: 11
+                                Maiduguri, Nigeria</p>
+                        </div>
                     </aside>
 
+                    
+                    <div class="eventType1"> <br> <br>
+                        <h1>Tackling Poverty with the Youths</h1>
+                        <div class="event-img3">
+                            <div class="event-Time">
+                                <h2>Countdown is finished!</h2>
+                            </div>
+                        </div>
+                        <p>If you were planning to support this cause in anyway, do note that the countdown <br> for funding of the project is gone and all the funds needed have been gotten but you <br> can support other causes like taking 200 girl Child to school in our campaign page. <br> <br> Once again thank you and we are grateful that you can see that  we're doing <br> great work</p>
+
+                    </div>
+
+                    <aside class="sidebar"> <br> <br>
+                        <h1>Event Details</h1>
+
+                        <div class="detali-one-one">
+
+                            <p><span class="detail"> <i class="fas fa-stop-watch"></i> Starting Time</span>: 10:00 am - 17:30 pm</p>
+                            <p><span class="detail"> <i class="fas fa-date"></i> Event Date</span>: 14 September, 2022
+                            </p>
+                            <p><span class="detail"> <i class="fas fa-phone"></i> Phone Number</span>: + 234 (901)
+                                285-7304 </p>
+                            <p><span class="detail"> <i class="fas fa-map-marker"></i> Address Location</span>: 06
+                                Osogbo, Nigeria</p>
+                        </div>
+                    </aside>
+
+
                 </div>
-            </section>
+            </section> <br>
 
 
             <!-- The sidebar for events ends -->
