adding more changes and committing them

--- a/events.html
+++ b/events.html
@@ -140,6 +140,8 @@
                                 285-7304 </p>
                             <p><span class="detail"> <i class="fas fa-map-marker"></i> Address Location</span>: 20
                                 Lagos, Nigeria</p>
+
+                            
                         </div>
                     </aside> 
 
@@ -150,7 +152,7 @@
                                 <h2>Countdown is finished!</h2>
                             </div>
                         </div>
-                        <p>Once again alll funds required for this Charity project has been actualized and therefore  <br> countdown closed....  If you wanted to sponsor any of our events and the Doors are shut or the <br> Countdowns have finished don't be afraid, our Team has many other Projects to carry out in which your support would be needed. <br> <br> Thanks again for your time, we really do appreciate you and your time.</p>
+                        <p>Once again alll funds required for this Charity project has been actualized and therefore  <br> countdown closed....  If you wanted to sponsor any of our events and the Doors are shut <br> or the  Countdowns have finished don't be afraid, our Team has many other Projects to carry <br> out in which your support would be needed. <br> <br> Thanks again for your time, we really do appreciate you and your time.</p>
 
                     </div>
 
