added new section to the evvents page

--- a/events.html
+++ b/events.html
@@ -207,6 +207,64 @@
             <!-- The sidebar for events ends -->
 
 
+            <!-- The Upcoming events section starts  -->
+
+            <section class="section upcomingEvents">
+                <div class="container">
+
+                    <h2 class="h2 section-title underline">Upcoming Events</h2>
+
+                    <ul class="eventsCenter">
+                        <li class="event1">
+
+                            <div class="dateEvent">
+                                <h2>15th <br> Aug</h2>
+                            </div> <br>
+
+                            <div class="eventTalk">
+                                <h3 class="h3">Operation Feed the Borno masses</h3>
+
+                                <h5>
+                                    <i class="fas fa-time"></i>8:00 am - 12:30 pm
+                                    <i class="fas fa-map-marker"></i>Borno State, Nigeria
+                                </h5>
+
+                                <p>The Boko Haram was first heard of in Borno State and the People of Borno State suffer
+                                    a
+                                    lot due to insurgency. Now we want to help them out in the little ways we can...</p>
+                                <a href="https://www.instagram.com/emmanuel.9944/" class="btn">Donate Now</a>
+                            </div>
+                        </li>
+
+                        <li class="event2">
+
+                            <div class="dateEvent2">
+                                <h2>28th <br> Dec</h2>
+                            </div> <br>
+
+                            <div class="eventTalk2">
+                                <h3 class="h3">Poor People's Donation Campaign</h3>
+
+                                <h5>
+                                    <i class="fas fa-time"></i>9:00 am - 4:30 pm
+                                    <i class="fas fa-map-marker"></i>Lagos State, Nigeria
+                                </h5>
+
+                                <p>The scripture says we should love our Neighbors just as we love ourselves. One great way to show love to your Neighbor is by giving out whatever you can afford to give. He who gives receives.</p>
+                                <a href="https://www.instagram.com/emmanuel.9944/" class="btn">Donate Now</a>
+                            </div>
+                        </li>
+                    </ul>
+
+                </div>
+            </section>
+
+
+            <!-- The Upcoming events section ends  -->
+
+
+
+
         </article>
     </main>
 
