--- a/events.html
+++ b/events.html
@@ -218,21 +218,19 @@
                         <li class="event1">
 
                             <div class="dateEvent">
-                                <h2>15th <br> Aug</h2>
+                                <h2>15th <br> Sep</h2>
                             </div> <br>
 
                             <div class="eventTalk">
-                                <h3 class="h3">Operation Feed the Borno masses</h3>
+                                <h3 class="h3">A week online Prayer for Nigeria</h3>
 
                                 <h5>
                                     <i class="fas fa-time"></i>8:00 am - 12:30 pm
-                                    <i class="fas fa-map-marker"></i>Borno State, Nigeria
+                                    <i class="fas fa-map-marker"></i>Lagos State, Nigeria
                                 </h5>
 
-                                <p>The Boko Haram was first heard of in Borno State and the People of Borno State suffer
-                                    a
-                                    lot due to insurgency. Now we want to help them out in the little ways we can...</p>
-                                <a href="https://www.instagram.com/emmanuel.9944/" class="btn">Donate Now</a>
+                                <p>No single Nigerian can deny the fact that the Country is not doing well, with the several dissapointing figures in Economy and other sectors. Join the one week Prayer for Nigeria</p>
+                                <a href="./contact.html" class="btn">Join Now</a>
                             </div>
                         </li>
 
@@ -247,10 +245,50 @@
 
                                 <h5>
                                     <i class="fas fa-time"></i>9:00 am - 4:30 pm
-                                    <i class="fas fa-map-marker"></i>Lagos State, Nigeria
+                                    <i class="fas fa-map-marker"></i>Ogun State, Nigeria
                                 </h5>
 
                                 <p>The scripture says we should love our Neighbors just as we love ourselves. One great way to show love to your Neighbor is by giving out whatever you can afford to give. He who gives receives.</p>
+                                <a href="https://www.instagram.com/emmanuel.9944/" class="btn">Donate Now</a>
+                            </div>
+                        </li>
+                    </ul>
+
+                    <ul class="eventsCenter">
+                        <li class="event1">
+
+                            <div class="dateEvent">
+                                <h2>15th <br> Sep</h2>
+                            </div> <br>
+
+                            <div class="eventTalk">
+                                <h3 class="h3">Equipping Ogun State Women with skills</h3>
+
+                                <h5>
+                                    <i class="fas fa-time"></i>11:00 am - 7:30 pm
+                                    <i class="fas fa-map-marker"></i>Lagos State, Nigeria
+                                </h5>
+
+                                <p>Our Church was founded in the Suburban areas of Ogun State when we we had just four Members, now the Church has grown and we will like to give back to our very own people in Ogun State</p>
+                                <a href="./contact.html" class="btn">Donate Now</a>
+                            </div>
+                        </li>
+
+                        <li class="event2">
+
+                            <div class="dateEvent2">
+                                <h2>13th <br> Nov</h2>
+                            </div> <br>
+
+                            <div class="eventTalk2">
+                                <h3 class="h3">After School program for Students</h3>
+
+                                <h5>
+                                    <i class="fas fa-time"></i>3:00 pm - 6:30 pm
+                                    <i class="fas fa-map-marker"></i>Ogun State, Nigeria
+                                </h5>
+
+                                <p>"Train up a Child in the way he should grow and when he is old he will never depart from it" That's our goal in this event for vast amount of Students in both secondary and promary Schools</p>
                                 <a href="https://www.instagram.com/emmanuel.9944/" class="btn">Donate Now</a>
                             </div>
                         </li>
@@ -261,6 +299,8 @@
 
 
             <!-- The Upcoming events section ends  -->
+
+            
 
 
 
