added google map to all event pages, done with the events.html page

--- a/events.html
+++ b/events.html
@@ -143,6 +143,12 @@
 
                             
                         </div>
+
+                        <iframe class="container banner-animation"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d247.66812192444593!2d3.3205490038016077!3d6.685275395166551!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b974b4a2d0913%3A0x3f9a4146232f5f3!2sLady%20J%20Stores!5e0!3m2!1sen!2sng!4v1652890715499!5m2!1sen!2sng"
+                        width="360" height="280" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
                     </aside> 
 
                     <div class="eventType1"> <br> <br>
@@ -170,6 +176,12 @@
                             <p><span class="detail"> <i class="fas fa-map-marker"></i> Address Location</span>: 11
                                 Maiduguri, Nigeria</p>
                         </div>
+
+                        <iframe class="container banner-animation"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d247.66812192444593!2d3.3205490038016077!3d6.685275395166551!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b974b4a2d0913%3A0x3f9a4146232f5f3!2sLady%20J%20Stores!5e0!3m2!1sen!2sng!4v1652890715499!5m2!1sen!2sng"
+                        width="360" height="280" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
                     </aside>
 
                     
@@ -197,6 +209,12 @@
                             <p><span class="detail"> <i class="fas fa-map-marker"></i> Address Location</span>: 06
                                 Osogbo, Nigeria</p>
                         </div>
+
+                        <iframe class="container banner-animation"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d247.66812192444593!2d3.3205490038016077!3d6.685275395166551!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b974b4a2d0913%3A0x3f9a4146232f5f3!2sLady%20J%20Stores!5e0!3m2!1sen!2sng!4v1652890715499!5m2!1sen!2sng"
+                        width="360" height="280" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
                     </aside>
 
 
@@ -288,7 +306,7 @@
                                     <i class="fas fa-map-marker"></i>Ogun State, Nigeria
                                 </h5>
 
-                                <p>"Train up a Child in the way he should grow and when he is old he will never depart from it" That's our goal in this event for vast amount of Students in both secondary and promary Schools</p>
+                                <p>"Train up a Child in the way he should grow and when he is old he will never depart from it" That's our goal in this event for vast amount of Students in both secondary and primary Schools</p>
                                 <a href="https://www.instagram.com/emmanuel.9944/" class="btn">Donate Now</a>
                             </div>
                         </li>
