started the campaign.html page, and done with its banner

--- a/events.html
+++ b/events.html
@@ -538,7 +538,7 @@
     </a>
 
 
-    <!-- The scroll top button starts -->
+    <!-- The scroll top button ends -->
 
 
 
@@ -551,7 +551,6 @@
     <!-- linking the ionicon script -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-
 
 
 </body>
