--- a/campaign.html
+++ b/campaign.html
@@ -91,6 +91,23 @@
     <!-- The navigation section ends  -->
 
 
+    <main>
+        <article>
+
+            <!-- The hero section for campaign.html starts -->
+
+            <section class="allBanner2"> <br>
+                <h2 class="bannerText">Our Campaigns</h2>
+            </section>
+
+            <!-- The hero section for campaign.html starts -->
+
+
+        </article>
+    </main>
+
+
+
     
 
     <!-- The footer section starts -->
@@ -293,6 +310,28 @@
     </footer>
 
     <!-- The footer section ends -->
+
+    
+    <!-- The scroll top button starts -->
+
+    <a href="#top" class="scroll-top active" aria-label="Go To Top" data-scroll-top>
+        <ion-icon name="arrow-up-outline">a</ion-icon>
+    </a>
+
+
+    <!-- The scroll top button ends -->
+
+
+
+    <!-- Linking the Owl-Carousel Javascript file -->
+    <script src="./js/owl.carousel.min.js"></script>
+
+    <script src="./js/bootstrap.bundle.min.js"></script>
+    <script src="./js/scripts.js"></script>
+
+    <!-- linking the ionicon script -->
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
 
 </body>
