added a new section to the campaign.html page

--- a/campaign.html
+++ b/campaign.html
@@ -103,6 +103,92 @@
             <!-- The hero section for campaign.html starts -->
 
 
+
+
+
+
+            <!-- The follow campaigns section starts -->
+
+            <section class=" section call-prayer" id="call-prayer">
+                <div class="container">
+
+                    <h2 class="h2 section-title underline">Follow up on our Campaigns</h2>
+
+                    <ul class="call-prayer-list">
+                        <li>
+                            <div class="call-prayer-card">
+
+                                <div class="call-prayer-card-icon">
+                                    <ion-icon name="people-outline">a</ion-icon>
+                                </div>
+
+                                <h3 class="h3 title">Financial help for Poor</h3>
+
+                                <p class="text">Our financial help for poor People's campaign has been ongoing for a while now and we have <b>RAISED ₦420,000 REMAINING THE SUM OF ₦300,000</b></p>
+
+                                <div class="donation-bar">
+                                    <span class="donation-percentage donate-poor"> <br>
+                                        <span class="percent">68%</span>
+                                    </span>
+                                </div>
+
+                                <a href="https://www.instagram.com/emmanuel.9944/" class="btn">Donate now</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="call-prayer-card">
+
+                                <div class="call-prayer-card-icon">
+                                    <ion-icon name="people-outline">a</ion-icon>
+                                </div>
+
+                                <h3 class="h3 title">Send Children to School</h3>
+
+                                <p class="text">We have noticed a fall in Students going to School due to several reasons. For this campaign,<b> the sum of ₦200,000 has been raised REMAINING 320,000</b></p>
+
+                                <div class="donation-bar">
+                                    <span class="donation-percentage donate-children"> <br>
+                                        <span class="percent">44%</span>
+                                    </span>
+                                </div>
+
+                                <a href="https://www.instagram.com/emmanuel.9944/" class="btn">Donate now</a>
+                            </div>
+                        </li>
+
+
+
+                        <li>
+                            <div class="call-prayer-card">
+
+                                <div class="call-prayer-card-icon">
+                                    <ion-icon name="hand-right-outline">a</ion-icon>
+                                </div>
+
+                                <h3 class="h3 title">School fees for 200 Girls</h3>
+
+                                <p class="text">The Girl Child has always been neglected when it comes to schooling, that is why we came up with this Campaign. <b>we have RAISED ₦330,000 REMAINING ₦150,000</b> </p>
+
+                                <div class="donation-bar">
+                                    <span class="donation-percentage donate-girl"> <br>
+                                        <span class="percent">84%</span>
+                                    </span> <br>
+                                </div>
+
+                                <a href="https://www.instagram.com/emmanuel.9944/" class="btn">Donate now</a>
+                            </div>
+                        </li>
+                    </ul>
+
+                </div>
+            </section>
+
+
+
+
+            <!-- The follow campaigns section ends -->
+
+
         </article>
     </main>
 
